# beancount-scottyg

./: pyproject.toml
src/beancount_scottyg/: __init__.py
