[project]
name = "beancount-scottyg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Scott Gorlin", email = "scottgorlin@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "beancount>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
